// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

import "ulid.proto";
import "defs/gogo.proto";

package pb;

message Account {
  option (gogoproto.stringer) =  false;
  string namespace = 1;
  ULID account_id = 2;

  message Limits {
    double http_requests = 1; // per second
    double bandwidth = 2; // in KB/s
  }
}

