// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

import "label.proto";

package pb;

message NetworkLocation {
  repeated string addresses = 1;
  LabelSet labels = 2;
  string name = 3;
}
